src/components/Dropdown.css
.Dropdown {
	position: relative;
	display: flex;
	min-width: 5em;
}

.Dropdown .btn--small {
	/* Avoid dumb rounding errors */
	min-height: 31px;
}

.Dropdown > .btn:first-child {
	text-align: left;
	flex-grow: 1;
}

.Dropdown--expanded > .btn:first-child {
	border-bottom-left-radius: 0;
}

.Dropdown--expanded > .btn:last-child {
	border-bottom-right-radius: 0;
}

.btn.Dropdown__trigger {
	height: 100%;
	margin: 0 0 0 -1px;
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

.Dropdown--expanded .Dropdown__trigger {
	border-bottom-right-radius: 0;
}

.Dropdown__arrow {
	width: 0.55em;
	vertical-align: middle;
}

.Dropdown__content {
	display: none;

	position: absolute;
	left: 0;
	right: 0;
	z-index: 10;

	margin: 0;
	margin-top: -1px;
	padding: 0;
	width: 100%;
	max-height: 50vh;
	overflow: scroll;
	overflow-x: hidden;
	overflow-y: scroll;

	color: var( --hm-warm-grey );
	background: #fff;
	border: 1px solid var( --hm-red );
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;

	cursor: auto;
	text-align: left;
}

.btn--tertiary .Dropdown__content {
	border-color: var( --hm-warm-grey );
}

.Dropdown--expanded .Dropdown__content {
	display: block;
}

.Dropdown__content > .btn {
	display: block;
	width: 100%;
	padding: 0.3em 0.5em;
	margin: 0;

	border: none;
	border-radius: 0;

	line-height: 1.4;
	text-align: left;
	white-space: initial;
}

.Dropdown__content > .btn:hover {
	border: none;
	background: var( --hm-red );
}

.btn--tertiary .Dropdown__content > .btn:hover {
	background: var( --hm-warm-grey );
}

